--- a/12blog/template/conText.ejs
+++ b/12blog/template/conText.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>blog-demo</title>
+	<title>blog-文章详情</title>
   	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -67,15 +67,12 @@
     </ul>
 </div>
 <div class="content">
-	<div class="header clear"><h2><img src="img/head.png" alt=""/></h2><p>发布者</p></div>
+	<div class="header clear"><h2><img style="width:56px; height:56px;border-radius: 50%;" src="<%= article_data.author_src %>" alt=""/></h2><p><%= article_data.author %></p></div>
     <div class="cont">
-    	<h3>文章标题</h3>
-        <div class="time"><p>2016-9-25 12:49:16 <span><img src="img/zan.png" alt=""/></span></p></div>
+    	<h3><%= article_data.title %></h3>
+        <div class="time"><p><%= article_data.sDate%> <span><img src="img/zan.png" alt=""/></span></p></div>
         <div class="text-box">
-            <p>文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容</p>
-            <p>文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容</p>
-            <p>文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容</p>
-            <p>文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容文章内容</p>
+            <%- article_data.content %>
         </div>
     </div>
 </div>
