--- a/12blog/template/index.ejs
+++ b/12blog/template/index.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>blog-demo</title>
+    <title>blog-首页</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -44,24 +44,14 @@
 <div class="content">
 	<div class="banner">
         <ul class="clearfix">
-            <li><img src="images/img_1.jpg" alt=""/>
+            <% for (var i = 0; i < banners.length; i++) { %>
+            <li><img src="<%= banners[i].src %>" alt=""/>
             	<div class="text-box">
-                	<h2>还可以降低首付款健身房11111</h2>
-                    <p>刘德华11 / 文</p>
+                	<h2><%= banners[i].title %></h2>
+                    <p><%= banners[i].sub_title %></p>
                 </div>
             </li>
-            <li><img src="images/img_2.jpg" alt=""/>
-            	<div class="text-box">
-                	<h2>还可以降低首付款健身房2222</h2>
-                    <p>刘德华22 / 文</p>
-                </div>
-            </li>
-            <li><img src="images/img_3.jpg" alt=""/>
-            	<div class="text-box">
-                	<h2>还可以降低首付款健身房333</h2>
-                    <p>刘德华33 / 文</p>
-                </div>
-            </li>
+            <% } %>
         </ul>
         <ol>
             <li class="active"></li>
@@ -71,60 +61,20 @@
     </div>
     <div class="newsList">
     	<ul>
+            <% for (var i = 0; i < articles.length; i++) { %>
             <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
+            	<a href="/article?id=<%= articles[i].ID %>">
+                    <h2><%= articles[i].title %></h2>
+                    <p><%= articles[i].summary %></p>
                 </a>
             </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
-            <li>
-            	<a href="conText.html">
-                    <h2>还可以降低首付款健身房还可以降低首付款健身房还可以降低首付款健身房333</h2>
-                    <p>还可以降低首付款健还可以降低首付款健身房还可以降低首付款健身房身房还可以降低首付款健还可以降低首付款健身房身房</p>
-                </a>
-            </li>
+            <% } %>
         </ul>
     </div>
 </div>
 <div class="foot-btn">
 	<ul>
-    	<li class="home"><a href="index.html"></a></li>
+    	<li class="home"><a href="/"></a></li>
         <li class="write"><a href="javascript:;"></a></li>
         <li class="my"><a href="mydoc.html"></a></li>
     </ul>
